# EviCode

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  REPRODUCIBILITY.md  SETUP.md  artifact_summary.json  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: humanevalx.yaml  smoke.yaml
docs/: ARCHITECTURE.md  DATASET_GUIDE.md  DEVELOPER_GUIDE.md  EXPERIMENT_GUIDE.md  LANGUAGE_NORMALIZED_EVIDENCE.md  PHASE3_REVIEWER_REPORT.md  PHASE4_REVIEWER_REPORT.md  REPRODUCTION_GUIDE.md  USER_GUIDE.md
paper/: main.tex  references.bib  results_analysis_review_runs.md  results_synthesis_review_runs.md  reviewer_panel_runs.md
progress/: completed_tasks.json  failed_tasks.json  progress.json  todo.json
scripts/: analyze_evidence.py  build_humanevalx.py  build_paper.py  evaluate_llm_predictions.py  execution_budget_analysis.py  external_dataset_validation.py  extract_evidence.py  generate_artifacts.py  phase2_scientific_analysis.py  refresh_static_evidence.py  run_experiments.py  run_smoke.py  statistical_analysis.py  weak_test_analysis.py
status/: generate_artifacts.json
tables/: bootstrap_f1.tex  dataset_statistics.tex  evidence_complementarity.tex  evidence_costs.tex  evidence_group_results.tex  evidence_hierarchy.tex  evidence_importance.tex  evidence_informativeness.tex  evidence_interactions.tex  evidence_summary.tex  evidence_taxonomy.tex  execution_budget_results.tex  external_validation_summary.tex  failure_detection_matrix.tex  failure_summary.tex  family_ablation.tex  main_results.tex  (+15 more)
(+59 files in other folders)
