[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evicode"
version = "0.1.0"
description = "Evidence-grounded verification for neural code intelligence"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "EviCode contributors"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.4,<2",
  "scipy>=1.12,<2",
  "pyyaml>=6.0,<7",
  "tqdm>=4.66,<5",
  "jsonlines>=4.0,<5",
  "datasets>=2.19,<4",
  "matplotlib>=3.8,<4",
  "seaborn>=0.13,<1",
  "networkx>=3.2,<4",
  "tree-sitter>=0.22,<1",
  "tree-sitter-python>=0.21,<1",
  "tree-sitter-javascript>=0.21,<1",
  "tree-sitter-java>=0.21,<1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
